--- a/3 - Lancer Partie/index3.html
+++ b/3 - Lancer Partie/index3.html
@@ -23,26 +23,26 @@
 
 	<!-- Création de la barre de navigation -->
 		
-		<nav class="navbar navbar-expand-1g navbar-dark bg-dark">
-			<a class="navbar-brand" href="#">
-				<button class="btn">
-					<img src="../IMAGES/Icone.jpg" width="80" height="80">
-				</button>
-			</a>
+	<nav class="navbar navbar-expand-1g navbar-black bg-black">
+		<a class="navbar-brand" href="#">
+			<button class="btn">
+				<img src="../IMAGES/Icone.jpg" width="80" height="80">
+			</button>			
+		</a>
 
 	<!-- Contenu de la barre de navigation -->
-			<div class="col-md-8">
-				<h1>Lancer une Partie</h1>
+		<div class="col-md-8">
+			<h1>Lancer une Partie</h1>
 
-				<a href="../index.html">
-					<button type="button" class="btn btn-info">
-						<span style='color:white'>
-							Accueil
-						</span>
-					</button>
-				</a>
-			</div>
-		</nav>
+			<a href="../index.html">
+				<button type="button" class="btn btn-info">
+					<span style='color:white'>
+						Accueil
+					</span>
+				</button>
+			</a>
+		</div>
+	</nav>
 
 <!-- ------------------------------------------------------------------------------------------------------ -->
 <!--                                             Corps de page                                              -->
